--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  another_carousel_pro: ^1.0.2
+  carousel_slider: ^4.2.1
+  cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^5.4.2+1
   equatable: ^2.0.5
@@ -56,6 +59,8 @@ flutter:
   assets:
     - assets/img/categories/
     - assets/img/landmarks/
+    - assets/img/
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
@@ -65,7 +70,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  #fonts:
+  fonts:
+    - family: Pacifico
+      fonts:
+        - asset: assets/Pacifico-Regular.ttf
   #  - family: Inter
   #   - family: Schyler
   #     fonts:
